--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "grommet": "2.27.0",
-    "react": "18.0.0",
+    "grommet": "2.33.1",
+    "react": " 18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "5.3.6"
+    "styled-components": "6.0.7"
   },
   "devDependencies": {
-    "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
-    "typescript": "4.4.2"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "typescript": "5.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
